Change volume mappings to named volumes
Updated volume mappings to use named volumes for app and workspaces.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       CLI_IMAGE: mobide-cli
       CLI_USER: mobide
     volumes:
-      - .:/app
+      - app:/app
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./workspaces:/workspaces
+      - workspaces:/workspaces
+    restart: unless-stopped
+
+volumes:
+  app:
+  workspaces:
